<resources>
	<string name="app_name">MVVM-Arch</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="no_users_yet">No users yet</string>
	<string name="_do">Do</string>
	<string name="home">Home</string>
	<string name="settings">Settings</string>
	<string name="user_list">User list</string>
	<string name="no_beer_yet">Noooo!!\n No beer here((</string>
	<string name="brewery">Brewery</string>
	<string name="name">Name</string>
	<string name="alcohol">Alcohol</string>
	<string name="ibu">IBU</string>
	<string name="plate">Plate</string>
	<string name="beer_list">Beer list</string>
	<string name="age">Age</string>
	<string name="original">Original</string>
	<string name="process">Process</string>
	<string name="encrypt">Encrypt</string>
	<string name="map">Map</string>
</resources>
